set(MODULE_NAME foo_algo)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/source ALGORITHM_LIST)
include_directories(${CMAKE_SOURCE_DIR})

add_library(${MODULE_NAME} SHARED ${ALGORITHM_LIST})
add_library(${PROJECT_NAME}::${MODULE_NAME} ALIAS ${MODULE_NAME})

target_include_directories(
    ${MODULE_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/source)
set(MODULE_TARGETS ${MODULE_TARGETS} ${MODULE_NAME} PARENT_SCOPE)
