[package]
name = "foo_arc"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
chrono = "0.2"
futures-util = "0.3"
getopts = "0.2"
http = "1.0"
hyper = {version = "1.0", features = ["http1", "server"]}
hyper-staticfile = "0.10"
hyper-util = {version = "0.1", features = ["tokio"]}
shellexpand = "3.1"
tokio = {version = "1.13", features = ["macros", "rt-multi-thread", "net", "io-util"]}
litemap = "=0.7.4"
zerofrom = "=0.1.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[[bin]]
name = "foo_arc"
path = "source/main.rs"
